add footer partial

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,5 @@
+@import "variables";
 @import "bootstrap";
 @import "animate/animate";
 @import "font-awesome/font-awesome";
-@import "variables";
+@import "style";
