--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,5 @@
 @import "variables";
-@import "bootstrap";
+@import "bootstrap/bootstrap";
 @import "animate/animate";
 @import "font-awesome/font-awesome";
 @import "style";
