add font-awesome fonts to gulpfile. edit app.scss

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,6 @@
 @import "variables";
+// @import "colors";
+// @import "typography";
 @import "bootstrap";
 @import "animate/animate";
 @import "font-awesome/font-awesome";
